fixes header image gap and fixes announcement bar front page WP query

--- a/css/general.css
+++ b/css/general.css
@@ -53,20 +53,9 @@ h1, h2, h3 {
   color: #412920;
 }
 
-.static_hero_image > img {
-  /* background-size: cover; */
+.main_display > img {
   position: relative;
   width: 100%;
   height: 300px;
   max-height: 300px;
-  /* margin: 0%; */
-  padding-bottom: -10px;
-}
-
-.static_hero_image {
-  margin: 0px;
-  padding: 0px;
-  min-width: 100%;
-  min-height: 100%;
-  
 }
